feat(events): add participation conditions
